  * implemented the VACUUM command for SQLite database to repack into minimal amount of disk space (File--Save and Vacuum)
  * it is now possible to edit the underlying text with the dialog listing the results of the search opened
  * implemented the word count in the statusbar, to be enabled in the preferences dialog (tab Miscellaneous, work of cyingfan)
  * implemented the option to hide the embedded file name on top of the embedded file icon (tab Rich Text, work of jhermans76)
  * assigned static keyboard shortcut Ctrl+Shift+Right for 'Node Change Parent'
  * updated bundled pygtkspellcheck from 4.0.1 to 4.0.5

0.37.6 (October 24th, 2016)
  * added auto apply of links to nodes as you type [[node name]] in rich text nodes
  * the text formatted monospace has now by default gray background; configurable in config.cfg
  * fixed problem causing the highlighted line to have wrong background
  * fixed crash caused by too large tooltip hovering a link
  * fixes to Spanish language submitted by stripTM

0.37.5 (October 2nd, 2016)
  * the password protected documents now use 7zip fastest compression resulting in faster save and slightly larger documents
  * added auto apply of web links as you type in rich text nodes
  * added auto apply of links to nodes as you type in rich text nodes (CamelCase nodes names only)
  * added proper scrolling to cursor after pasting of multiple lines of text from the clipboard
  * added palette to the color picker dialog for the node name
  * fixed bugs related to export to pdf of tables and codeboxes
  * limited the spell check to rich text nodes after currently unresolvable problems with plain text spell check

0.37.4 (August 20th, 2016)
  * bugfix: regression since 0.37.0 for trees with more than 11 levels and cherries per node level
  * added groovy language syntax highlighting support
  * added language Greek, work of Delphina

0.37.3 (August 6th, 2016)