@@ -5,6 +5,7 @@
   * implemented the VACUUM command for SQLite database to repack into minimal amount of disk space (File--Save and Vacuum)
   * it is now possible to edit the underlying text with the dialog listing the results of the search opened
   * implemented the word count in the statusbar, to be enabled in the preferences dialog (tab Miscellaneous, work of cyingfan)
+  * implemented the option to hide the tree right side auxiliary icon (currently a padlock for read only nodes and a pin for bookmarked nodes)
   * implemented the option to hide the embedded file name on top of the embedded file icon (tab Rich Text, work of jhermans76)
   * assigned static keyboard shortcut Ctrl+Shift+Right for 'Node Change Parent'
   * updated bundled pygtkspellcheck from 4.0.1 to 4.0.5
